--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -1323,14 +1323,10 @@
                                     <constraint firstAttribute="width" constant="93" placeholder="YES" id="wjv-g4-wgN"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OsJ-Md-wac" customClass="FluxAnimatingLogo">
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OsJ-Md-wac" customClass="FluxAnimatingLogo">
                                 <rect key="frame" x="114" y="230" width="93" height="108"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="108" id="7X8-7a-dCW"/>
-                                    <constraint firstAttribute="width" constant="93" id="CoB-XC-iJQ"/>
-                                </constraints>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RuW-dy-GsI">
                                 <rect key="frame" x="0.0" y="568" width="320" height="408"/>
@@ -1460,9 +1456,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.91764705882352937" green="0.24705882352941178" blue="0.24705882352941178" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="OsJ-Md-wac" secondAttribute="centerX" id="0zY-rI-KSl"/>
                             <constraint firstItem="xZG-ie-JbE" firstAttribute="top" secondItem="S58-5P-rnV" secondAttribute="top" constant="230" placeholder="YES" id="DOv-yx-Fa8"/>
-                            <constraint firstItem="OsJ-Md-wac" firstAttribute="top" secondItem="S58-5P-rnV" secondAttribute="top" constant="230" id="ECD-Dv-3CG"/>
                             <constraint firstAttribute="centerX" secondItem="xZG-ie-JbE" secondAttribute="centerX" placeholder="YES" id="eHq-To-4PY"/>
                         </constraints>
                     </view>
